force-app/main/default/objects/Easement__c/Easement__c.object-meta.xml
<CustomObject>
    <label>Easement</label>
    <nameField>
        <displayFormat>EA-{0}</displayFormat>
        <label>Easement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Easements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>