force-app/main/default/objects/Easement__c/fields/Easement_Business_Days_Act__c.field-meta.xml
<CustomField>
    <fullName>Easement_Business_Days_Act__c</fullName>
    <label>Easement Business Days Act</label>
    <type>Date</type>
</CustomField>