force-app/main/default/objects/Easement__c/fields/Easement_Business_Days_Est__c.field-meta.xml
<CustomField>
    <fullName>Easement_Business_Days_Est__c</fullName>
    <label>Easement Business Days Est</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>