force-app/main/default/objects/Easement__c/fields/Easement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Easement_Notes__c</fullName>
    <label>Easement Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>