force-app/main/default/objects/Easement__c/fields/Easement_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Easement_Party_Name__c</fullName>
    <label>Easement Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>