force-app/main/default/objects/Easement__c/fields/Easement_Process_Completed_Act__c.field-meta.xml
<CustomField>
    <fullName>Easement_Process_Completed_Act__c</fullName>
    <label>Easement Process Completed Act</label>
    <type>Date</type>
</CustomField>