force-app/main/default/objects/Easement__c/fields/Easement_Process_Started_Act__c.field-meta.xml
<CustomField>
    <fullName>Easement_Process_Started_Act__c</fullName>
    <label>Easement Process Started Act</label>
    <type>Date</type>
</CustomField>