force-app/main/default/objects/Easement__c/fields/Easement_Process_Started_Est__c.field-meta.xml
<CustomField>
    <fullName>Easement_Process_Started_Est__c</fullName>
    <label>Easement Process Started Est</label>
    <type>Date</type>
</CustomField>