force-app/main/default/objects/Easement__c/fields/Easement_Received_from_Utility__c.field-meta.xml
<CustomField>
    <fullName>Easement_Received_from_Utility__c</fullName>
    <label>Easement Received from Utility</label>
    <type>Date</type>
</CustomField>