force-app/main/default/objects/Easement__c/fields/Easement_Type__c.field-meta.xml
<CustomField>
    <fullName>Easement_Type__c</fullName>
    <label>Easement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aerial</fullName>
            </value>
            <value>
                <fullName>DOT</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Land Owner</fullName>
            </value>
            <value>
                <fullName>Transmission Corridor</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>